--- a/test_uffizzi_ram.yml
+++ b/test_uffizzi_ram.yml
@@ -17,13 +17,18 @@ services:
     configs:
       - source: my_config_2
         target: /etc/nginx/conf.d/default.conf
+    deploy:
+      resources:
+        limits:
+          memory: 4000M
+
 
   worker:
     image: uffizzitest/worker:latest
     deploy:
       resources:
         limits:
-          memory: 250M
+          memory: 2000M
 
   vote:
     image: uffizzitest/vote:latest
@@ -31,6 +36,11 @@ services:
 
   result:
     image: uffizzitest/result:latest
+    deploy:
+      resources:
+        limits:
+          memory: 2000M
+
 
 configs:
   my_config_2:
