--- a/test_uffizzi_ram.yml
+++ b/test_uffizzi_ram.yml
@@ -1,12 +1,20 @@
 services:
   redis:
     image: redis:latest
+    deploy:
+      resources:
+        limits:
+          memory: 1000M
 
   postgres:
     image: postgres:9.6
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      deploy:
+      resources:
+        limits:
+          memory: 500M
 
   nginx:
     image: nginx:latest
@@ -39,7 +47,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2000M
+          memory: 500M
 
 
 configs:
