--- a/test_uffizzi_ram.yml
+++ b/test_uffizzi_ram.yml
@@ -40,6 +40,10 @@ services:
 
   vote:
     image: uffizzitest/vote:latest
+    deploy:
+      resources:
+        limits:
+          memory: 500M
 
 
   result:
