--- a/uffizzi-compose-hw-args.yml
+++ b/uffizzi-compose-hw-args.yml
@@ -2,7 +2,7 @@ services:
   hello-world:
     build:
       context: https://github.com/ALEXANCHESSS/hello-world-1
-      dockerfile: Dockerfile.args
+      dockerfile: Dockerfile
       args:
         - IMAGES_PATH=images
         - TEST_ARG=Hello from compose - master - 6
