--- a/uffizzi-compose-hw-args.yml
+++ b/uffizzi-compose-hw-args.yml
@@ -1,31 +1,18 @@
-# services:
-#   hello-world:
-#     build:
-#       context: https://github.com/ALEXANCHESSS/hello-world-1
-#       dockerfile: Dockerfile.args
-#       args:
-#         - IMAGES_PATH=images
-#         - TEST_ARG=Hello from compose - master - 6
-
-# x-uffizzi:
-#   ingress:
-#     service: hello-world
-#     port: 80
-#   continuous_preview:
-#     share_to_github: true
-#     delete_preview_after: 3h
-#     delete_preview_when_pull_request_is_closed: true
-#     deploy_preview_when_pull_request_is_opened: true
-
 services:
   hello-world:
     build:
-      context: https://github.com/ALEXANCHESSS/hello-world-1#compose-test
+      context: https://github.com/ALEXANCHESSS/hello-world-1
       dockerfile: Dockerfile.args
       args:
         - IMAGES_PATH=images
-        - TEST_ARG=Hello from compose
+        - TEST_ARG=Hello from compose - master - 6
 
-x-uffizzi-ingress:
-  service: hello-world
-  port: 80
+x-uffizzi:
+  ingress:
+    service: hello-world
+    port: 8080
+  continuous_preview:
+    share_to_github: true
+    delete_preview_after: 3h
+    delete_preview_when_pull_request_is_closed: true
+    deploy_preview_when_pull_request_is_opened: true
